--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@vuepress/types": "^1.9.7",
-    "rollup-plugin-glsl": "^1.3.0"
+    "rollup-plugin-glsl": "^1.3.0",
+    "unplugin-vue-components": "^0.22.0"
   }
 }
