--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
             ],
             "public": [
                 "src/public/"
+            ],
+            "components": [
+                "src/components"
             ]
         },
         "allowSyntheticDefaultImports": true,
