--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuepress": "^2.0.0-beta.49"
   },
   "dependencies": {
+    "three": "^0.142.0",
     "@vuepress/types": "^1.9.7",
     "rollup-plugin-glsl": "^1.3.0",
     "unplugin-vue-components": "^0.22.0"
