--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "target": "es5",
         "sourceMap": true,
+        "jsx": "preserve",
         "lib": [
             "es2015",
             "dom"
