--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
         ],
         "baseUrl": "./",
         "paths": {
-            "@": [
-                "src/"
+            "@/*": [
+                "src/*"
             ],
             "public": [
                 "src/public/"
