--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "vuepress": "^2.0.0-beta.49"
   },
   "dependencies": {
-    "three": "^0.142.0",
+    "@codemirror/lang-javascript": "^6.0.2",
+    "@codemirror/theme-one-dark": "^6.1.0",
+    "codemirror": "^6.0.1",
     "rollup-plugin-glsl": "^1.3.0",
-    "unplugin-vue-components": "^0.22.0"
+    "three": "^0.142.0",
+    "unplugin-vue-components": "^0.22.0",
+    "vue-codemirror": "^6.1.1"
   }
 }
