--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@codemirror/lang-javascript": "^6.0.2",
     "@codemirror/theme-one-dark": "^6.1.0",
     "codemirror": "^6.0.1",
+    "pinia": "^2.0.22",
     "rollup-plugin-glsl": "^1.3.0",
     "three": "^0.142.0",
     "unplugin-vue-components": "^0.22.0",
